- Reimplemented the project method of the ndhist class to handle the new
  out-of-range bin scheme.

- Overloaded the arithmetic operators of the ndhist class for all (excluding
  boost::python::object) supported weight types.

- Implemented the unit test "oor_bin_copies_test" to actually check if the
  underflow, etc. properties of ndhist return deep copies.

- If the bin content array is an object array, the underflow, overflow,
  underflow_squaredweights, and overflow_squaredweights properties of ndhist
  make a deepcopy (using BoostNumpy's ndarray.deepcopy method) of their returned
  ndarrays, so that the objects are also copied.

- The properties
      - underflow,
      - overflow,
      - underflow_entries,
      - overflow_entries,
      - underflow_squaredweights,
      - overflow_squaredweights
  of ndhist return copies of the underflow and overflow bins, because if the
  extendable axes extend, those out-of-range bins will become core bins. In case
  the user really needs views into the internal bin content array, one should
  use the corrsponding *_view properties, e.g. underflow_view.

- The methods
      - py_get_noe_ndarray,
      - py_get_sow_ndarray and
      - py_get_sows_ndarray
  return ndarrays that are views into the core (i.e. excluding under- and
  overflow bins) bin content array of the histogram.

- Reserved (virtual) under- and overflow bins within the front and back
  capacities of the bin content array for extendable axes. So an actual view
  into the bin content array can be created for ndarrays returned by the
  underflow and overflow properties of ndhist.
  The under and overflow bins of non-extendable axes are now also included in
  the bin content array. So the binentries, bincontent and squaredweights
  properties are creating a view into the bin content array showing only the
  core array, i.e. without the under- and overflow bins.

- Adjusted the fill method to the new oor bin scheme. It still needs to be
  tested.
